[package]
name = "dodge_the_creeps"
version = "0.1.0"
authors = ["The godot-rust developers"]
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/godot-rust/godot-rust" }
rand = "0.8.4"
bevy_app = "0.5.0"
bevy_ecs = "0.5.0"
once_cell = "1.8.0"
